moving data file to ressources and moving java version from 21 to 17